policies/kyverno/env/dev/patches/disallow-privileged-hostpath.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-hostpath
spec:
  validationFailureAction: Audit
