policies/kyverno/env/dev/patches/verify-image-attestations.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-attestations
spec:
  validationFailureAction: Audit
